# epic-lfhcal-tbana

./: .gitignore  .gitmodules  README.md  backup_lfhcal_beamdata.sh  prepareAnalysisDirectory.sh
NewStructure/: AnaSummary.cc  AnaSummary.h  Analyses.cc  Analyses.h  CMakeLists.txt  Calib.cc  Calib.h  CalibSampleParser.cc  CalibSampleParser.h  CalibSummary.cc  CalibSummary.h  CommonHelperFunctions.h  Compare.cc  CompareAna.cc  CompareCalib.cc  CompareHGCROCCalib.cc  CompareHGCROCCalib.h  CompareInjection.cc  CompareParsedHGCROC.cc  ComparisonAna.cc  ComparisonAna.h  ComparisonCalib.cc  ComparisonCalib.h  ComparisonInjection.cc  ComparisonInjection.h  Convert.cc  CreateMapping.C  DataAna.cc  DataAnalysis.cc  DataAnalysis.h  DataPrep.cc  Display.cc  Doxyfile  EvaluateRecoEffiHGCROC.C  Event.cc  Event.h  EventDisplay.cc  EventDisplay.h  HGCROC.cc  HGCROC.h  (+69 more)
NewStructure/waveform_fitting/: max_sample_fit.cc  max_sample_fit.h  waveform_fit_base.h
configs/: DataTakingDB_202409_CAEN.csv  DataTakingDB_202409_HGCROC.csv  DataTakingDB_ORNL_Cosmics_HGCROC_202510.txt  DataTakingDB_ORNL_HGCROC.txt  DualModuleMappingExample.txt  ModulePositions.txt  badChannelMap_TBSetup_HGCROC_202408_From_01092024.txt  badChannelMap_TBSetup_HGCROC_cosmics_20251009_Cstack.txt  config_HGCROCPedestalCalibParser.txt  layersCAEN_PSTB_2024.txt  layersCAEN_PSTB_2024_reduced.txt  layersHGCROC_Cosmics_20250606.txt  layersHGCROC_Cosmics_20251017.txt  layersHGCROC_Cosmics_20251017_FStack.txt  layersHGCROC_PSTB2024_Run118-337.txt  layersHGCROC_PSTB2024_Run68-117.txt  layersHGCROC_PSTB_From_01092024_12pm.txt  layersHGCROC_PSTB_Til_31082024_1pm-01092024_.txt  layersHGCROC_config2_2025tb.txt  layersHGCROC_config3_2025tb.txt  mappingFile_202409_CAEN.txt  mappingFile_202409_CAEN_reduced.txt  mappingSingleHGCROCAsic_2025tb.txt  mappingSingleHGCROCAsic_alternate.txt  mappingTBSetupNewStructure_12102024_PS.txt  mapping_HGCROC_Cosmics_20250606.txt  mapping_HGCROC_ORNL_Cosmics_20251009.txt  mapping_HGCROC_ORNL_Cosmics_20251014.txt  mapping_HGCROC_ORNL_Cosmics_20251017.txt  mapping_HGCROC_PSTB2024_Run118-337.txt  mapping_HGCROC_PSTB2024_Run118-337_alternate.txt  mapping_HGCROC_PSTB2024_Run68-117.txt  mapping_HGCROC_PSTB2024_Run68-117_alternate.txt  modulePositions_2026.txt  run_summary_full.csv
configs/FOCalTest2026/: DataDB_InjectionTestFocal_202604.csv  mapping_injectionTest.txt
configs/LocalTesting/: DataTakingDB_ORNL_Cosmics_HGCROC_202510.csv  DataTakingDB_ORNL_Cosmics_HGCROC_202510.txt  DataTakingDB_ORNL_HGCROC_Cosmics_Longboard_202512.csv  DataTakingDB_ORNL_HGCROC_Cosmics_Summing_202603.csv  DataTakingDB_ORNL_Summing_HGCROC_202508.csv  DataTakingDB_ORNL_Summing_HGCROC_202508.txt  ToAOffsets_Cosmics_LB_160.csv  ToAOffsets_Cosmics_LB_162.csv  ToAOffsets_Cosmics_ST_ORNL02.csv  ToAOffsets_Cosmics_ST_ORNL02_22x.csv  badChannelMap_HGCROC_Cosmics_LB_Config1.txt  badChannelMap_HGCROC_Cosmics_LB_Config2.txt  badChannelMap_HGCROC_Cosmics_LB_Config3.txt  badChannelMap_HGCROC_Cosmics_LB_Config4.txt  badChannelMap_HGCROC_Cosmics_LB_Config5.txt  badChannelMap_TBSetup_HGCROC_cosmics_202510_Fstack.txt  layersHGCROC_Cosmics_20250606.txt  layersHGCROC_Cosmics_20251009.txt  layersHGCROC_Cosmics_20251014.txt  layersHGCROC_Cosmics_LB_Config1.txt  layersHGCROC_Cosmics_LB_Config2.txt  layersHGCROC_Cosmics_LB_Config3.txt  layersHGCROC_Cosmics_LB_Config4.txt  layersHGCROC_Cosmics_LB_Config5.txt  layersHGCROC_Cosmics_LB_Config6.txt  layersHGCROC_Cosmics_LB_Config7.txt  layersHGCROC_summingTest_2026_1.csv  layersHGCROC_summingTest_2026_1_detailed.csv  layersHGCROC_summingTest_2026_2.csv  mappingFile_Cosmics_CAEN.txt  mapping_HGCROC_Cosmics_20250606.txt  mapping_HGCROC_ORNL_Cosmics_20251017_FStack.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config1.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config2.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config3.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config4.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config5.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config6.txt  mapping_HGCROC_ORNL_Cosmics_LB_Config7.txt  mapping_HGCROC_ORNL_Summing.txt  (+5 more)
configs/TB2023/: mappingTBSetupNewStructure_11102023_PS.txt  mappingTBSetupNewStructure_Sept2023_SPSfirstdays.txt  mappingTBSetup_11102023_PS.txt  mappingTBSetup_12102023_PS.txt  mappingTBSetup_SPS1stdays_extended.txt
configs/TB2024/: DataTakingDB_202409_CAEN.csv  DataTakingDB_202409_HGCROC.csv  DataTakingDB_202409_HGCROC.ods  badChannelMap_TBSetup_HGCROC_202408_118-337.txt  badChannelMap_TBSetup_HGCROC_202408_118-337_lastLayers.txt  layersHGCROC_PSTB2024_Run5-67.txt  mapping_CAEN_PST09_202409_CAEN_withSeg.txt  mapping_HGCROC_PSTB2024_Run118-337.txt  mapping_HGCROC_PSTB2024_Run5-67.txt  mapping_HGCROC_PSTB2024_Run5-67_alternate.txt  mapping_HGCROC_PSTB2024_Run68-117.txt  modulePositions_2024.txt
configs/TB2025/: DataTakingDB_202511_HGCROC.csv  ToAOffsets_TB2025_CalibFinal.csv  ToAOffsets_TB2025_HadRun.csv  badChannel_HGCROC_PSTB2025_default.txt  badChannel_HGCROC_PSTB2025_layer0.txt  layersHGCROC_config4_2025tb.txt  layersHGCROC_default_2025tb.txt  mapping_HGCROC_PSTB2025_config2.txt  mapping_HGCROC_PSTB2025_config2_wSegments.txt  mapping_HGCROC_PSTB2025_config3.txt  mapping_HGCROC_PSTB2025_config3_wSegments.txt  mapping_HGCROC_PSTB2025_config4.txt  mapping_HGCROC_PSTB2025_config4_wSegments.txt  mapping_HGCROC_PSTB2025_default.txt  mapping_HGCROC_PSTB2025_default_wSegments.txt  modulePositions_2025.txt
configs/TB2026/: DataTakingDB_TBPST10_202604_HGCROC.csv  DataTakingDB_TBSPSH2_202605_HGCROC.csv  ToAOffsets_TB2026_FullSetC.csv  ToAOffsets_TB2026_FullSetD.csv  ToAOffsets_TB2026_FullSetE.csv  ToAOffsets_TB2026_HVScan1.csv  ToAOffsets_TBSPS2026_FullSetB.csv  badChannel_HGCROC_PSTB2026_dummy.txt  badChannel_HGCROC_PSTB2026_module0.txt  badChannel_HGCROC_PSTB2026_module1.txt  badChannel_HGCROC_SPSTB2026_dummy.txt  layersHGCROC_TBPST10_Sumv1_default.csv  layersHGCROC_TBPST10_Sumv1_default_detailed.csv  layersHGCROC_TBPST10_Sumv2_default.csv  layersHGCROC_TBPST10_Sumv2_default_detailed.csv  layersHGCROC_TBSPSH2_Sumv2_default.csv  mappingSingleASICSummingBoard.csv  mappingSingleASICSummingBoard_v1.csv  (+8 more)
